--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sanity": "^3.93.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
